--- a/part3/TP/views/template.pug
+++ b/part3/TP/views/template.pug
@@ -1,11 +1,87 @@
 html
   body
+    script.
+      function editCity(eid,name){
+        document.getElementById("editTitle").textContent = "Modifier " + name;
+        document.getElementById("editBtn").innerHTML = '<button onClick="formatAndfakeSubmit(\''+eid+'\')" >Enregister</button>';
+        document.getElementById("editBox").style.display = "";
+      }
+
+      function formatAndfakeSubmit(eid){
+        var data={};
+        data.name = document.getElementById("newName").value;
+        
+        var json = JSON.stringify(data);
+        var XMLHTTP = new XMLHttpRequest();
+        XMLHTTP.open('PUT','/city/'+eid, true);
+        
+        XMLHTTP.setRequestHeader('Content-type', 'application/json', charset='utf-8');
+        XMLHTTP.send(json);
+        document.getElementById("editBox").style.display = "none";
+        XMLHTTP.onLoad = function() {
+          document.location.href="./cities";
+        }
+      }
+
+      function formatAndSubmit(){
+        var data={};
+        data.name = document.getElementById("newCityName").value;
+        
+        var json = JSON.stringify(data);
+        var XMLHTTP = new XMLHttpRequest();
+        XMLHTTP.open('POST','/city', true);
+        
+        XMLHTTP.setRequestHeader('Content-type', 'application/json', charset='utf-8');
+        XMLHTTP.send(json);
+        XMLHTTP.onLoad = function() {
+          document.location.href="./cities";
+        }
+      }
+
+      function deleteCity(eid){
+        var XMLHTTP = new XMLHttpRequest();
+        XMLHTTP.open('DELETE','/city/'+eid, true);
+        
+        XMLHTTP.setRequestHeader('Content-type', 'application/json', charset='utf-8');
+        XMLHTTP.send();
+        XMLHTTP.onLoad = function() {
+          //
+        }
+        //document.location.href="./cities";
+      }
+
     h1=titre
     table
       tr
-        th id
-        th ville
+        th Id
+        th Ville
+        th Modifier
+        th Supprimer
       each element in bddContent
         tr
-          each value in element
-            td=value
+          td=element._id
+          td=element.name
+          td
+            button(onclick="editCity('"+ element._id +"','"+ element.name +"')") Modifier
+          td
+            button(onclick="deleteCity('"+ element._id +"')") Supprimer
+  div
+    h2 Ajouter une ville
+      table
+        tr
+          td
+            Nom ville :
+          td 
+            input(type="text", name="name", id="newCityName")
+          td 
+            button(onclick="formatAndSubmit()") Enregistrer
+  div(id="editBox", style="display:none")
+    h2(id="editTitle") Modifier
+    table
+      tr
+        td
+          Nouveau nom :
+        td 
+          input(type="text", id="newName")
+        td(id="editBtn") 
+          button(onclick="formatAndfakeSubmit()") Enregistrer
